1) Init Instance on config_global.html 2)Preventing conf_vars_array false or null on before_delete() 3)DC Scheme insert on install.xml

--- a/config_global.html
+++ b/config_global.html
@@ -6,6 +6,7 @@
 
 require_once('block_boaidp.php');
 $boaidp = new block_boaidp();
+$boaidp->boaidp_initInstance();
 
 //$q='';
 $bname = $boaidp->bname;
